--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,5 +3,10 @@
 Ordis - изучи сам, научи других
 {% endblock %}
 {% block content %}
-    <h1>Тут будет верстка</h1>
+{% if current_user.is_authenticated%}
+<h2>Привет, {{current_user.username}}. Ваш канал называется {{current_user.channel_name}}. Ваши интересы
+    {{current_user.interests}}</h2>
+{% else %}
+<h2>Привет, неизвестный пользователь. Вы можете зарегистрироваться или войти.</h2>
+{% endif %}
 {% endblock %}
