--- a/app/static/css/register.css
+++ b/app/static/css/register.css
@@ -23,7 +23,7 @@ p {
     margin-bottom: 50px;
 }
 
-input {
+input, textarea {
     border-radius: 10px;
     border: 1px solid #a4a4a4;
     box-shadow: none;
