--- a/app/static/css/channel_style.css
+++ b/app/static/css/channel_style.css
@@ -31,29 +31,31 @@
     width: inherit;
     background-color: white;
 }
+
 .channel_name {
     padding-top: 10px;
     font-size: 18px;
     float: left;
 }
+
 .page_select {
     float: left;
     position: absolute;
     margin-left: 607px;
     margin-top: 55px;
 }
-.page_select a{
+
+.page_select a {
     margin-right: 156px;
     text-decoration: none;
     color: black;
     font-size: 18px;
 }
+
 .page_select a:hover {
     color: #0090ff;
 }
-#main_page_link {
-    border-bottom: 1px solid #0090ff;
-}
+
 .subscribe {
     display: block;
     float: left;
@@ -71,10 +73,17 @@
     margin-top: 29px;
     text-decoration: none;
 }
+
 .subscribe:hover {
     text-decoration: none;
-    color:white
+    color: white
 }
+
+.lesson_name {
+    font-size: 14px;
+    margin-bottom: 11px !important;
+}
+
 .count_subscribers {
     position: absolute;
     margin-left: 1750px;
@@ -89,3 +98,4 @@
     -moz-border-radius: 10px;
     border-radius: 10px;
 }
+
