--- a/app/templates/channel_main.html
+++ b/app/templates/channel_main.html
@@ -2,24 +2,29 @@
 {% block links2 %}
 <link rel="stylesheet" href="{{url_for('static', filename='css/channel_main_style.css')}}">
 {% endblock %}
+
 {% block channel_content %}
 <p class="channel_content_title">Популярные уроки</p>
-<div class="lessons_column">
-    <div class="block_lesson">
-        <a class="preview"></a>
-        <p class="lesson_name">{{lessons[0].lesson_name}}</p>
-        <div class="time">
-            <div class="icon_time"></div>
-            <p>{{lessons[0].duration}}</p>
+<div class="popular_lessons_group">
+    {% for i in range(lessons|length)%}
+    <div class="lessons_column">
+        <div class="block_lesson">
+            <a href="" class="preview" style="background: url({{url_for('lesson_preview', id=lessons[i].id)}}) no-repeat; background-size:100%;"></a>
+            <div class="lesson_name_block"><a href="" class="lesson_name">{{lessons[i].lesson_name}}</a>
+            </div>
+            <div class="time">
+                <div class="icon_time"></div>
+                <p class="duration">{{lessons[i].video.duration}}</p>
+            </div>
+            <div class="views">
+                <div class="icon_views"></div>
+                <p class="views_text">{{lessons[i].views}} {{views[i]}}</p>
+            </div>
+            <p class="date_added">{{dates[i]}}</p>
         </div>
     </div>
+    {% endfor %}
 </div>
 <style>
-    .preview {
-        background: url("{{url_for('lesson_preview', id=lessons[0].id)}}") no-repeat;
-        background-size: 100%;
-        border-color: transparent !important;
-        background-color: transparent !important;
-    }
 </style>
 {% endblock %}
