--- a/app/static/css/base_style.css
+++ b/app/static/css/base_style.css
@@ -1,3 +1,6 @@
+body {
+    overflow-x: hidden!important;
+}
 .up_menu {
     height: 63px;
     background-color: #00aeff;
@@ -63,4 +66,5 @@
 .content {
     background-color: #dfe0e0;
     height: 100%;
+    overflow-x: hidden!important;
 }
