--- a/app/templates/search_lesson.html
+++ b/app/templates/search_lesson.html
@@ -14,6 +14,7 @@
         <a class="dropdown-item" href="{{url_for('search', what_is='users', search_input=search)}}">Поиск по каналам</a>
     </div>
 </div>
+<p class="search_title">Уроки</p>
 <div class="popular_lessons_group">
     {% include 'lesson_views.html' %}
 </div>
