--- a/app/templates/search_users.html
+++ b/app/templates/search_users.html
@@ -14,6 +14,7 @@
         <a class="dropdown-item" href="{{url_for('search', what_is='users', search_input=search)}}">Поиск по каналам</a>
     </div>
 </div>
+<p class="search_title">Каналы</p>
 <div class="users_block">
     {% for user in users %}
     <div class="user">
