--- a/app/static/css/search_users_style.css
+++ b/app/static/css/search_users_style.css
@@ -106,3 +106,9 @@
     border-radius: 10px;
     margin-top: 32px;
 }
+.search_title {
+    font-size: 24px;
+    margin-left: 280px;
+    margin-top: -35px;
+    color: #0090ff;
+}
