--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,15 +63,11 @@
     {% endblock %}
 
 </div>
+<footer>
+<p class="footer_text">Ordis - видеохостинг для обучения. Изучил сам - научи других</p>
+</footer>
 <style>
-    {
-    %
-    if
-    current_user
-    .
-    is_authenticated
-    %
-    }
+    {% if current_user.is_authenticated %}
     .avatar-menu {
         display: block;
         background: url("{{url_for('avatar', id=current_user.id)}}") no-repeat;
@@ -100,11 +96,7 @@
         background-color: transparent !important;
     }
 
-    {
-    %
-    endif
-    %
-    }
+    {%endif%}
 </style>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
