--- a/app/channel/templates/channel/channel_main.html
+++ b/app/channel/templates/channel/channel_main.html
@@ -1,6 +1,6 @@
 {% extends 'channel/channel.html' %}
 {% block links2 %}
-<link rel="stylesheet" href="{{url_for('static', filename='css/channel_main_style.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/channel/channel_main_style.css')}}">
 {% endblock %}
 
 {% block channel_content %}
