Fixed a bug with editing the lesson. Added the ability to add attached files to the lesson when editing. Fixed a bug with fixing footer on someone else's user page. Added the icon on the block a lesson to navigate to the edit page of the lesson if the lesson belongs to a user.

--- a/app/static/css/lesson_block_style.css
+++ b/app/static/css/lesson_block_style.css
@@ -117,6 +117,34 @@ p {
     border-bottom: 1px solid #0090ff;
     text-decoration: none;
 }
+
 .right_none {
     clear: left;
+}
+
+.lesson_menu_button {
+    display: block;
+    background-image: url('/static/img/lesson_menu.png');
+    width: 16px;
+    height: 4px !important;
+    float: left;
+    border: none;
+    padding: 0;
+    background-size: 100%;
+    border-color: transparent !important;
+    background-color: transparent !important;
+    clear: left;
+    margin-top: 23px;
+}
+
+.lesson_menu_button:hover {
+    background-color: transparent !important;
+}
+
+.lesson_menu_button::after {
+    display: none !important;
+}
+
+.lesson_menu_button:focus {
+    background-color: transparent !important;
 }
