Add the text of presentation of the flask-prokect in Moskow

--- a/app/templates/user_agreement.html
+++ b/app/templates/user_agreement.html
@@ -4,5 +4,5 @@
 {% endblock %}
 
 {% block content %}
-<h1>Тут должно быть пользовательское соглашение, но его пока нет</h1>
+<h1>Тут должно быть пользовательское соглашение, но его нет</h1>
 {% endblock %}
